# move-formatter

./: .gitignore  .vscodeignore  README.md  package.json  tsconfig.json
move-formatter-ext/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
move-formatter-ext/src/: extension.ts
move-formatter-rs/: Cargo.toml  index.d.ts  index.js  package.json
move-formatter-rs/.github/workflows/: CI.yml
move-formatter-rs/npm/darwin-x64/: README.md  package.json
move-formatter-rs/npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: extension.ts  lib.rs
